<resources>
	<!-- App text configuration -->
    <string name="app_name">Loan Chacha Partners</string>
    
    <!--  App About Information -->
    <string name="app_version">Version 1.0</string>
    <string name="copyright">Copyright &#169; 2015  \n All rights reserved</string>
    <string name="email_address">support@chhapoliya.com</string>

	<!-- Parse push notification -->
	<string name="parse_application_id">vy8em0WdYZ4GFhximt3yCBMzexMoia02Sf7543TM</string>
	<string name="parse_client_key">L5ggx1ore2VTGziDRGteD0JvXoIs6w7NGWSC8nSL</string>
    
    <!-- play store application in more apps -->
    <string name="more_apps">http://uddanpromotions.in</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_phone">Your device does not support phone call feature</string>
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="category_list">Choose Category</string>
    <string name="search">Search...</string>
    <string name="send_enquiry">Send Enquiry</string>
    <string name="send_contact">Send Message</string>
	<string name="detail">Detail</string>
	<string name="add">Add this to my order</string>
	<string name="share_btn">Share this</string>
	<string name="share">Share</string>
	<string name="contact">Contact Us</string>
	<string name="callus">Call us</string>
    <string name="alert">Failed to connect internet or no data found!</string>
    <string name="not_found">Not Found!</string>
    <string name="number_order">Enter Quantity : </string>
    <string name="order">Order</string>
    <string name="my_order">Detail Order</string>
    <string name="total_order">Total Order :</string>
    <string name="clear_order">Clear all order</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
	<string name="clear_one_order">Do you want to clear this order?</string>
	<string name="db_exist_alert">Do you want to remove your previous order?</string>
	<string name="confirm">Confirmation</string>
	<string name="reservation">Reservation</string>
	<string name="your_name">Your Name</string>
	<string name="address">Your Address</string>
	<string name="city">Your City</string>
	<string name="province">State</string>
	<string name="email">Your Email</string>
	<string name="number_of_people">Number of people</string>
	<string name="date">Set Date</string>
	<string name="time">Set Time</string>
	<string name="phone_number">Phone Number</string>
	<string name="order_list">Order List</string>
	<string name="send_reservation">Send</string>
	<string name="form_alert">Please, complete the form first.</string>
	<string name="sending_alert">Sending data. Please wait &#8230;</string>
	<string name="ok_alert">Your Order has been successfully sent.</string>
	<string name="failed_enquiry">Your Enquiry has not been sent.</string>
    <string name="ok_enquiry">Your Enquiry has been successfully sent.</string>
    <string name="failed_alert">Your Order has not been sent.</string>
	<string name="no_order">Your Cart is Empty, Please Order first.</string>
	<string name="check_order_later">Check if you want to order later</string>
	<string name="order_later">#Order later</string>
	 <string name="desc_list_item_icon">Item Icon</string>
	<string name="no_order_menu">No order</string>
	<string name="order_alert">You have not ordered yet</string>
	<string name="add_comment">Comment (Optional)</string>
	<string name="menu_settings">Settings</string>
	<string name="app_info">App Info</string>
	<string name="main_menu">Main Menu</string>
	<string name="title_activity_home">Home</string>
	<string name="more">More Apps</string>
	<string name="rate">Rate Apps</string>
	<string-array name="main_menu_list">
        <item >List Menu</item>
        <item >Your Order</item>
        <item >Confirmation</item>
    </string-array>
    
	<string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>   
    
	<string name="menu_product">Products</string>
    <string name="go_shop">Continue</string>
	<string name="menu_cart">Cart</string>
	<string name="menu_checkout">Checkout</string>
    <string name="menu_enquiry">Feedback</string>
	<string name="menu_profile">About Us</string>
	<string name="menu_info">Terms of Use</string>
	<string name="menu_about">About</string>
	<string name="menu_share">Share</string>
	<string name="menu_contact">Contact</string>
    <string name="menu_notification">Notification</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Products</item>
        <item>Cart</item>
        <item>Checkout</item>
        <item>Feedback</item>
        <item>About Us</item>
        <item>Terms of Use</item>
        <item>About</item>
        <item>Share</item>
        <item>Contact</item>

        <item>Exit</item>
        <item>Notification</item>
        <item>Logout</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons, keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>
        <item>@drawable/ic_arrow</item>


    </array>
      
	<!-- Write your description about profile menu for tab 1 and tab 2 -->
	<string name="profile_tab1">    
		In case of assistance, please call or visit us:\r\n\r\n \r\nBehind SBBJ Bank, Industrial Area, \r\nRani Bazar, Bikaner (Rajasthan). \r\n
        \r\n\r\nCall: 9024433343
	</string>	
	<string name="profile_tab2">
		We are a group of dedicated people who provides products and training related to Health and Nutrition. Our nutrition products, such as, Nutricharge Man, Nutricharge Woman, Nutricharge Kids are some of best selling nutrition product in India. \r\n\r\nUsing our App, loanchacha, you can easily place order to us, and we\'ll deliver it to you at very affordable cost. For any details, please contact us.
	</string>
	
	<!-- Write your description about information menu for tab 1, tab 2 and tab 3 -->
	<string name="information_tab1">
		The payment of your order is currently available as only Cash On Delivery. You need to pay the amount when you get product. No advance payment or online payment is available at the time.
	</string>	
	<string name="information_tab2">
	    In case of un-satisfaction and refund your money and return products, please contact us on given details.
	</string>	
	<string name="information_tab3">
	    To cancel product, please contact us on given details. Our representative will ask you about your queries, and will take appropriate actions accordingly.
	</string>
	
	<!-- Write your description if order sent successfully -->
	<string name="success_order">
		Your Order has been successfully sent. We will contact you soon and complete your order.

	</string>
    <string name="failure_payment">
		Your Order has been successfully sent but the Online Payment was not processed successfully. Please contact us for order confirmation.

	</string>

    <string name="success_enquiry">
		Your Enquiry has been successfully sent. We will contact you soon.

	</string>


	<string name="GPSAlertDialogTitle">GPS is setting</string>
	<string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>

	<string name="settings">Settings</string>
	<string name="cancel">Cancel</string>

	<string name="latitude">Latitude : </string>
	<string name="longitude">Longitude : </string>

	<string name="country">Country : </string>

	<string name="postalCode">Postal Code : </string>
	<string name="addressLine">Address Line : </string>
	<string name="action_settings">Settings</string>
</resources>