<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:background="@drawable/bgp"
    android:padding="20dp"
    >

    <ScrollView
        android:id="@+id/sclDetail_cont"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="true"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/lytContent_cont"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/border"
            android:layout_gravity="center_vertical"
            >

            <WebView
                android:id="@+id/webContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:visibility="gone"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/header"
                android:text="Add Lead"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                ></TextView>



            <EditText
                android:id="@+id/edtName_cont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/your_name"
                android:inputType="textCapWords"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>






            <EditText
                android:id="@+id/edtPhone_cont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>


            <EditText
                android:id="@+id/edtComment_cont"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="top|left"
                android:visibility="gone"
                android:hint="@string/add_comment"
                android:inputType="textMultiLine"
                android:padding="7dp"
                android:lines="4"
                android:textSize="14sp" >
            </EditText>

            <Button
                android:id="@+id/btnSend_cont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/mybutton"
                android:text="Submit"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>





</RelativeLayout>