<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/sclDetail_enq"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="true"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/lytContent_enq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <EditText
                android:id="@+id/edtName_enq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Patient Name"
                android:inputType="textCapWords"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edtKota_enq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Age"

                android:textSize="14sp"
                android:ems="10" >
            </EditText>

            <EditText
                android:id="@+id/edtProvinsi_enq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Gender"

                android:textSize="14sp"
                android:ems="10" >
            </EditText>

            <EditText
                android:id="@+id/edtPhone_enq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>



            <EditText
                android:id="@+id/edtEmail_enq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edtAlamat_enq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="7dp"

                android:textSize="14sp" >
            </EditText>

            <Button
                android:id="@+id/btnGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/header"
                android:text="Pick My Location (GPS)"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtDoctor_enq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Refered By (Doctor)"

                android:textSize="14sp"
                android:ems="10" >
            </EditText>


            <EditText
                android:id="@+id/edtTestName_enq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Test Name"
                android:visibility="gone"

                android:textSize="14sp"
                android:ems="10" >
            </EditText>






            <EditText
                android:id="@+id/edtComment_enq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="top|left"
                android:hint="Comments or details about enquiry"
                android:inputType="textMultiLine"
                android:padding="7dp"
                android:lines="8"
                android:textSize="14sp" >
            </EditText>

            <Button
                android:id="@+id/btnSend_enq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/header"
                android:text="@string/send_enquiry"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>





</RelativeLayout>